new weapon fixes

--- a/src/main/resources/static/css/adm-man/adm-man__new-weapons.css
+++ b/src/main/resources/static/css/adm-man/adm-man__new-weapons.css
@@ -10,10 +10,30 @@
 
 .content__item {
     word-break: break-word;
-    width: 400px;
+    width: 650px;
     margin: 20px auto auto auto;
     border: 2px solid black;
 }
+
+.weapon-flex {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.weapon-description {
+    width: 500px;
+}
+
+.button-flex-row {
+    display: flex;
+    justify-content: center;
+}
+
+.button-flex-row * {
+    margin: 0 15px;
+}
+
 
 .content__main {
     padding: 12px;
@@ -30,8 +50,12 @@ h1 {
     border-bottom: 2px solid;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 750px) {
     .content__item {
-        width: 80vw;
+        width: 90vw;
+    }
+
+    .weapon-description {
+        width: 70vw;
     }
 }
