--- a/src/main/resources/templates/managers/manager__new-weapons.html
+++ b/src/main/resources/templates/managers/manager__new-weapons.html
@@ -19,18 +19,19 @@
     <div class="form-item gray" th:if="${requests == null or requests.isEmpty()}">
         There are no new requests
     </div>
-    <div th:each="request: ${requests}" class="content__item content__main finished">
-        <div class="flex-row-center">
+    <div th:each="request: ${requests}" class="content__item">
+        <div th:id="${'weapon-content-' + request.id}" class="content__main weapon-flex finished">
             <div th:switch="${request.type.name()}">
-                <img th:case="MELEE" alt="melee" th:src="@{/images/melee.png}">
-                <img th:case="PISTOL" alt="pistol" th:src="@{/images/pistol.svg}">
-                <img th:case="SUBMACHINE_GUN" alt="submachine gun" th:src="@{/images/}">
-                <img th:case="ASSAULT_RIFLE" alt="assault rifle" th:src="@{/images/assault.png}">
-                <img th:case="LIGHT_MACHINE_GUN" alt="light machine gun" th:src="@{/images/}">
-                <img th:case="SNIPER_RIFLE" alt="sniper rifle" th:src="@{/images/sniper.png}">
-                <img th:case="ALIEN" alt="alien" th:src="@{/images/alien.png}">
+                <img class="icon_middle" th:case="MELEE" alt="melee" th:src="@{/images/melee.png}">
+                <img class="icon_middle" th:case="PISTOL" alt="pistol" th:src="@{/images/pistol.svg}">
+                <img class="icon_middle" th:case="SUBMACHINE_GUN" alt="submachine gun" th:src="@{/images/smg.png}">
+                <img class="icon_middle" th:case="ASSAULT_RIFLE" alt="assault rifle" th:src="@{/images/assault.png}">
+                <img class="icon_middle" th:case="LIGHT_MACHINE_GUN" alt="light machine gun"
+                     th:src="@{/images/minigun.png}">
+                <img class="icon_middle" th:case="SNIPER_RIFLE" alt="sniper rifle" th:src="@{/images/sniper.png}">
+                <img class="icon_middle" th:case="ALIEN" alt="alien" th:src="@{/images/alien.png}">
             </div>
-            <div>
+            <div class="weapon-description">
                 <div class="form-item_small">
                     <b>Name</b>
                     <span th:text="${request.name}"></span>
@@ -51,9 +52,20 @@
                     <b>Quantity</b>
                     <span th:text="${request.quantity}"></span>
                 </div>
+                <div th:id="${'weapon-buttons-' + request.id}" class="form-item button-flex-row">
+                    <a th:attr="data-weapon-id=${request.id}" data-action="accept" class="button approved">Accept</a>
+                    <a th:attr="data-weapon-id=${request.id}" data-action="reject" class="button rejected">Reject</a>
+                </div>
+                <div th:id="${'weapon-flash-' + request.id}" class="flash hidden">
+                    <div th:id="${'weapon-flash-message-' + request.id}"></div>
+                    <button th:id="${'weapon-undo-' + request.id}" th:attr="data-weapon-id=${request.id}"
+                            data-action="undo" class="form-item button">Undo 10
+                    </button>
+                </div>
             </div>
         </div>
     </div>
 </div>
+<script rel="script" type="text/javascript" th:src="@{/js/managers/manager__new-weapon.js}"></script>
 </body>
 </html>
