--- a/src/main/resources/templates/scientists/sci__report.html
+++ b/src/main/resources/templates/scientists/sci__report.html
@@ -73,7 +73,7 @@
         </label>
         <label class="form-item_small">
             <b>Type</b>
-            <select id="weaponType" name="weaponType" class="input_big">
+            <select form="report-form" id="weaponType" name="weaponType" class="input_big">
                 <option value="melee"> Melee</option>
                 <option value="pistol"> Pistol</option>
                 <option value="submachine_gun"> Submachine gun</option>
