--- a/src/main/resources/templates/scientists/sci__main_requests.html
+++ b/src/main/resources/templates/scientists/sci__main_requests.html
@@ -44,8 +44,8 @@
                     <span> Minor Exp. #</span><span th:text="${exp.id}"></span> <b><span th:text="${exp.title}"></span></b>
                 </span>
         </div>
-        <div class="flex-column-left">
-            <div th:id="${'exp-content-' + exp.id}" class="content__main">
+        <div class="content__main">
+            <div th:id="${'exp-content-' + exp.id}" class="flex-column-left">
                 <b>Examinator</b>
                 <div th:text="${exp.examinator.employee.name}"></div>
                 <div th:if="${exp.assistant}">
@@ -57,7 +57,7 @@
                 <b class="form-item_micro">Description</b>
                 <div th:text="${exp.description}"></div>
             </div>
-            <div class="flex-row">
+            <div class="flex-row-center">
                 <a th:attr="data-exp-id=${exp.id}" data-action="accept" class="button approved button_row">Accept</a>
                 <a th:attr="data-exp-id=${exp.id}" data-action="reject" class="button rejected button_row">Reject</a>
             </div>
