--- a/src/main/resources/static/css/adm-man/adm-man__new-weapons.css
+++ b/src/main/resources/static/css/adm-man/adm-man__new-weapons.css
@@ -1,7 +1,19 @@
 @import url("../common.css");
+@import url("../mobile-burger.css");
+
+body {
+    margin: 0;
+}
+
+.grid-button {
+    margin: auto;
+    text-align: center;
+    width: 23vw;
+}
 
 .content {
     text-align: center;
+    margin-top: 106px;
 }
 
 .content_prawns {
@@ -40,7 +52,8 @@
 }
 
 h1 {
-    margin-top: 0;
+    margin: 0;
+    width: 100%;
     text-align: center;
 }
 
@@ -57,5 +70,29 @@ h1 {
 
     .weapon-description {
         width: 70vw;
+    }
+}
+
+@media (max-width: 700px) {
+    .grid-button {
+        margin-top: 25px;
+        margin-bottom: 25px;
+        width: 80vw;
+        font-size: 22px;
+    }
+}
+
+@media (max-width: 450px) {
+    .weapon-flex {
+        flex-direction: column;
+    }
+
+    .button-flex-row {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .button-flex-row * {
+        margin-bottom: 7px;
     }
 }
