--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -173,6 +173,12 @@ select {
     align-items: center;
 }
 
+.flex-row-center-left {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
 .pending {
     background: #dcefff;
 }
