--- a/src/main/resources/templates/scientists/sci__main_requests.html
+++ b/src/main/resources/templates/scientists/sci__main_requests.html
@@ -9,11 +9,11 @@
 </head>
 <body>
 <div id="header" class="fixed-header">
-    <div id="header_mobile" class="flex-row-left hidden">
+    <div id="header_mobile" class="flex-row-center-left">
         <img th:src="@{/images/burger.png}" id="burger" class="burger icon">
         <div id="mobile-title" class="mobile-title">Requests</div>
     </div>
-    <div id="mobile-menu" class="flex-row">
+    <div id="mobile-menu" class="mobile-buttons-row">
         <a th:href="@{/profile}" class="flex-column button button_profile">
             Profile
         </a>
@@ -72,5 +72,6 @@
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/scientists/sci__main.js}"></script>
 <script rel="script" type="text/javascript" th:src="@{/js/formatDateTime.js}"></script>
+<script rel="script" type="text/javascript" th:src="@{/js/mobileMenu.js}"></script>
 </body>
 </html>
