--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -179,6 +179,18 @@ select {
     align-items: center;
 }
 
+.flex-row-between {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.flex-row-around {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
 .pending {
     background: #dcefff;
 }
