--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -1,5 +1,5 @@
-@import url("../common.css");
-@import url("../mobile-burger.css");
+@import url("common.css");
+@import url("mobile-burger.css");
 
 body {
     margin: 0;
