--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -13,6 +13,7 @@
     <span class="flex-row-center">You are logged in as ****
             <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
             <img alt="History" class="shop-icon icon" th:src="@{/images/history.svg}">
+            <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.png}">
             <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
         </span>
 </div>
@@ -61,6 +62,7 @@
 <div class="mobile-footer flex-row-around">
     <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     <img alt="History" class="shop-icon icon" th:src="@{/images/history.svg}">
+    <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.png}">
     <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
     <img alt="Feedback" class="shop-icon icon" th:src="@{/images/feedback.png}">
 </div>
