--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -10,11 +10,11 @@
 <body>
 <div class="desktop-header fixed-header fixed-header_small flex-row-between">
     <a class="feedback">Feedback</a>
-    <span class="flex-row-center">You are logged in as ****
-            <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
-            <img alt="History" class="shop-icon icon" th:src="@{/images/history.svg}">
-            <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
-        </span>
+    <div class="flex-row-center">You are logged in as ****
+        <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
+        <img alt="History" class="shop-icon icon" th:src="@{/images/history.svg}">
+        <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
+    </div>
 </div>
 
 <div id="header_mobile" class="flex-row-center-left">
