--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,23 +8,24 @@
     <title>MNU</title>
 </head>
 <body>
+<div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 <form action="#" th:action="@{/auth/register}" th:object="${form}" method="post" class="flex-column reg-lower">
     <a class="login-page__back-link" th:href="@{/auth/login}">< back</a>
     <label class="form-item">
         <b>Login</b>
-        <input th:field="*{username}" class="input_big">
+        <input required th:field="*{username}" class="input_big">
     </label>
     <label class="form-item">
         <b>Password</b>
-        <input th:field="*{password}" type="password" class="input_big">
+        <input required th:field="*{password}" type="password" class="input_big">
     </label>
     <label class="form-item">
         <b>Email</b>
-        <input th:field="*{email}" type="email" class="input_big">
+        <input required th:field="*{email}" type="email" class="input_big">
     </label>
     <label class="form-item">
         <b>Name</b>
-        <input th:field="*{name}" class="input_big">
+        <input required th:field="*{name}" class="input_big">
     </label>
     <label class="form-item">
         <b>Who are you?</b>
