--- a/src/main/resources/static/css/scientists/sci__main.css
+++ b/src/main/resources/static/css/scientists/sci__main.css
@@ -1,5 +1,5 @@
-@import url("../common.css");
-@import url("../mobile-burger.css");
+@import "../common.css";
+@import "../mobile-burger.css";
 
 body {
     margin: 0;
