--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
     <title>MNU</title>
 </head>
 <body>
+<div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
 <form action="#" method="post" th:action="@{/auth/login}" th:object="${form}" class="flex-column lower">
     <label class="form-item">
         <b>Login</b>
