--- a/src/main/resources/templates/manufacturers/manufacturer__new-vacancy.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__new-vacancy.html
@@ -23,6 +23,34 @@
     </div>
 </div>
 
+<div class="content flex-column">
+    <div class="font-big">
+        You can suggest a new vacancy for our prawns and it will be shown to them after our administrator's approval.
+    </div>
+    <form action="#" th:action="@{/UNKNOWN}" th:object="${form}" method="post" class="content_form flex-column-left">
+        <label class="form-item_big">
+            <b>Title</b>
+            <input id="title" name="title" class="input_big" required>
+        </label>
+        <label class="form-item">
+            <b>Salary</b>
+            <input id="salary" name="salary" class="input_big" required type="number" min="0">
+        </label>
+        <label class="form-item">
+            <b>Required karma</b>
+            <input id="requiredKarma" name="requiredKarma" class="input_big" required type="number">
+        </label>
+        <label class="form-item">
+            <b>Working hours per week</b>
+            <input id="workHoursPerWeek" name="workHoursPerWeek" class="input_big" required type="number" min="1">
+        </label>
+        <label class="form-item">
+            <b>Vacant places</b>
+            <input id="vacantPlaces" name="vacantPlaces" class="input_big" required type="number" min="1">
+        </label>
+        <input type="submit" class="button submit" value="Suggest">
+    </form>
+</div>
 <script rel="script" type="text/javascript" th:src="@{/js/mobileMenu.js}"></script>
 </body>
 </html>
