--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -43,7 +43,8 @@
     </div>
 
     <div id="mobile-menu" class="grid__departments flex-column">
-        <a th:href="@{/}"> Melee weapons </a>
+        <a th:href="@{/}"> All </a>
+        <a th:href="@{/}" class="form-item_big"> Melee weapons </a>
         <a th:href="@{/}" class="form-item_big"> Pistols </a>
         <a th:href="@{/}" class="form-item_big"> SMGs </a>
         <a th:href="@{/}" class="form-item_big"> Assault riffles </a>
