--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,11 +12,11 @@
 <form action="#" method="post" th:action="@{/auth/login}" th:object="${form}" class="flex-column lower">
     <label class="form-item">
         <b>Login</b>
-        <input th:field="*{username}" class="input_big">
+        <input th:field="*{username}" required class="input_big">
     </label>
     <label class="form-item">
         <b>Password</b>
-        <input th:field="*{password}" type="password" class="input_big">
+        <input th:field="*{password}" required type="password" class="input_big">
     </label>
     <div th:if="${loginFailed}" class="form-item"><b>Incorrect login or password</b></div>
     <input type="submit" class="form-item button" value="Log in">
