--- a/src/main/resources/static/css/administrators/admin__vacancies.css
+++ b/src/main/resources/static/css/administrators/admin__vacancies.css
@@ -1,1 +1,44 @@
 @import "../common.css";
+@import "../mobile-burger.css";
+
+body {
+    margin: 0;
+}
+
+.vacancy-item {
+    display: inline-block;
+    width: 240px;
+    height: 240px;
+    border: 2px solid black;
+    border-radius: 30px;
+    text-align: center;
+    padding: 12px;
+    word-break: break-word;
+    background: #f6f6f6;
+    margin: 15px;
+}
+
+.content {
+    padding: 0 20px;
+    margin-top: 120px;
+}
+
+.grid-button {
+    width: 13vw;
+    margin: auto;
+    text-align: center;
+}
+
+@media (max-width: 1000px) {
+    .grid-button {
+        width: 17vw;
+    }
+}
+
+@media (max-width: 700px) {
+    .grid-button {
+        margin: 15px auto;
+        font-size: 22px;
+        width: 80vw;
+    }
+}
