admin vacancy requests

--- a/src/main/resources/templates/administrators/admin__new-weapons.html
+++ b/src/main/resources/templates/administrators/admin__new-weapons.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/adm-man/adm-man__new-weapons.css}">
     <title>MNU</title>
 </head>
-<body>
+<body data-role="admin">
 <div class="fixed-header fixed-header_small">
     <div id="header_mobile" class="flex-row-center-left">
         <img th:src="@{/images/burger.png}" id="burger" class="burger icon">
