--- a/src/main/resources/templates/administrators/admin__vacancies.html
+++ b/src/main/resources/templates/administrators/admin__vacancies.html
@@ -19,7 +19,7 @@
         </a>
         <a th:href="@{/admin/main}" class="grid-button button button_back_mobile">Main menu</a>
         <div class="grid-button button button_pressed"> All vacancies</div>
-        <a th:href="@{/admin/vacancies/request}" class="grid-button button"> Requests</a>
+        <a th:href="@{/admin/vacancies/requests}" class="grid-button button"> Requests</a>
         <a th:href="@{/admin/vacancies/new}" class="grid-button button"> New vacancy</a>
     </div>
 </div>
@@ -28,7 +28,7 @@
     <div class="flex-column form-item gray" th:if="${vacancies == null or vacancies.isEmpty()}">
         There are no vacancies
     </div>
-    <div class="vacancy-item" th:each="vacancy : ${vacancies}">
+    <div class="vacancy-item light-gray-bg" th:each="vacancy : ${vacancies}">
         <div class="flex-column-no-center">
             <div class="font-big" th:text="${vacancy.title}">
             </div>
@@ -45,7 +45,7 @@
                 <div th:text="${vacancy.workHoursPerWeek}"></div>
             </div>
             <div class="form-item flex-row-between">
-                <b>Places</b>
+                <b>Vacant places</b>
                 <div th:text="${vacancy.vacantPlaces}"></div>
             </div>
         </div>
