--- a/src/main/resources/templates/managers/manager__new-weapons.html
+++ b/src/main/resources/templates/managers/manager__new-weapons.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/adm-man/adm-man__new-weapons.css}">
     <title>MNU</title>
 </head>
-<body>
+<body data-role="man">
 <div class="flex-row-center fixed-header fixed-header_small">
     <a th:href="@{/}">
         <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
