--- a/src/main/resources/static/css/administrators/admin__vacancies.css
+++ b/src/main/resources/static/css/administrators/admin__vacancies.css
@@ -5,6 +5,10 @@ body {
     margin: 0;
 }
 
+.light-gray-bg{
+    background: #f6f6f6;
+}
+
 .vacancy-item {
     display: inline-block;
     width: 240px;
@@ -14,7 +18,6 @@ body {
     text-align: center;
     padding: 12px;
     word-break: break-word;
-    background: #f6f6f6;
     margin: 15px;
 }
 
